tests/c_programs/specifiers/invalid_parse/duplicate_type_specifier.c
// Duplicate type specifier should be rejected
int int x;
